[metadata]
name = nsrr_data
version = 0.1.0
author = Alexander Neergaard Zahid, PhD
author_email = aneol@dtu.dk
description = Tools for downloading and processing data from NSRR.
long_description = file: README.md
# license = file: LICENSE
license_files =
classifiers =
    Programming Language :: Python :: 3

[options]
# install_requires = file: requirements.txt
package_dir =
    nsrr_data = nsrr_data
# packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    examples*
    tests*

# [options.entry_points]
# console_scripts =
#     fetch-nsrr = nsrr_data.fetch_data:
